fix: add wrap to flex items.

--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -3,6 +3,7 @@
 }
 .hero__container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
@@ -24,6 +25,7 @@
 
 .hero__container2 {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   padding-bottom: 2rem;
